<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActiviy"
    >



    <TextView
        android:id="@id/dashboard_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dashboard_indexTop"
        android:text="@string/dasboard_index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@id/dashboard_currentDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dashboard_currentDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_index" />

    <FrameLayout
        android:id="@id/frameLayout_lecture1_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lecture_height"
        android:layout_marginTop="@dimen/lecture_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_currentDay">

        <ImageButton
            android:id="@id/button_lecture1_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            tools:srcCompat="@android:color/darker_gray"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/view_lectureBackground1_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@id/view_homework1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <ImageView
            android:id="@id/view_test1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            app:srcCompat="@android:drawable/btn_dialog" />


        <TextView
            android:id="@id/text_lectureRoom1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/lecture_room" />

        <TextView
            android:id="@id/text_lectureNumber1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_number" />

        <TextView
            android:id="@+id/text_lectureName1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_name" />

        <TextView
            android:id="@+id/text_lectureTime1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lecture_time" />

        <TextView
            android:id="@id/text_Week1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="190dp"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_Lecture2_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout_lecture1_1">

        <ImageButton
            android:id="@+id/button_popOutLecture2_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/view_lectureBackground2_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/view_homework2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <ImageView
            android:id="@+id/view_test2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            app:srcCompat="@android:drawable/btn_dialog" />


        <TextView
            android:id="@+id/text_lectureRoom2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/lecture_room" />

        <TextView
            android:id="@+id/text_lectureNumber2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_number" />

        <TextView
            android:id="@+id/text_lectureName2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_name" />

        <TextView
            android:id="@+id/text_lectureTime2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lecture_time" />

        <TextView
            android:id="@id/text_Week4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="190dp"/>




    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_Lecture3_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_Lecture2_1">

        <ImageButton
            android:id="@+id/button_popOutLecture3_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/view_lectureBackground3_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/view_homework3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <ImageView
            android:id="@+id/view_test3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            app:srcCompat="@android:drawable/btn_dialog" />


        <TextView
            android:id="@+id/text_lectureRoom3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/lecture_room" />

        <TextView
            android:id="@+id/text_lectureNumber3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_number" />

        <TextView
            android:id="@+id/text_lectureName3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_name" />

        <TextView
            android:id="@+id/text_lectureTime3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lecture_time" />

        <TextView
            android:id="@id/text_Week4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="190dp"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_Lecture4_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_Lecture3_1">

        <ImageButton
            android:id="@+id/button_popOutLecture4_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/view_lectureBackground4_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:srcCompat="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/view_homework4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <ImageView
            android:id="@+id/view_test4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            app:srcCompat="@android:drawable/btn_dialog" />


        <TextView
            android:id="@+id/text_lectureRoom4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/lecture_room" />

        <TextView
            android:id="@+id/text_lectureNumber4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_number" />

        <TextView
            android:id="@+id/text_lectureName4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/lecture_name" />

        <TextView
            android:id="@+id/text_lectureTime4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lecture_time" />

        <TextView
            android:id="@id/text_Week4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="190dp"/>



    </FrameLayout>

</android.support.constraint.ConstraintLayout>